Replace youtube-nocookie with standard YouTube for better engagement tracking
- Update _includes/embedded_resource.html to use youtube.com/embed
- Update lib/talk_renderer.rb to use standard YouTube embed URLs
- Update CSP policy to allow youtube.com instead of youtube-nocookie.com
- Fix all test expectations to match standard YouTube URLs
- Ensure YouTube can track video views and suggest more talks to viewers

This change prioritizes content discovery and recommendation over privacy,
helping viewers find more of the speaker's content through YouTube's algorithm.

--- a/_test_site/index.html
+++ b/_test_site/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="Developer advocate and expert in DevOps, software development practices, and technology trends. Regular speaker at major conferences about improving developer productivity and software quality.">
     
     <!-- Security Headers -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; frame-src 'self' https://www.youtube-nocookie.com https://docs.google.com https://drive.google.com; connect-src 'self' ws://127.0.0.1:35729;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; frame-src 'self' https://www.youtube.com https://docs.google.com https://drive.google.com; connect-src 'self' ws://127.0.0.1:35729;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     
     <!-- Stylesheets -->
@@ -309,7 +309,7 @@
     <!-- Footer -->
     <footer class="site-footer" role="contentinfo">
         <div class="wrapper">
-            <p>&copy; 2025 Baruch Sadogursky. All rights reserved.</p>
+            <p>&copy; now Baruch Sadogursky. All rights reserved.</p>
         </div>
     </footer>
 </body>
