--- a/_perf_test_site/talks/2025-06-20-voxxed-luxembourg-technical-enshittification/index.html
+++ b/_perf_test_site/talks/2025-06-20-voxxed-luxembourg-technical-enshittification/index.html
@@ -350,7 +350,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <!-- Footer -->
     <footer class="site-footer" role="contentinfo">
         <div class="wrapper">
-            <p>&copy; 2025 Baruch Sadogursky. All rights reserved.</p>
+            <p>&copy; now Baruch Sadogursky. All rights reserved.</p>
         </div>
     </footer>
 </body>
