--- a/_perf_test_site/index.html
+++ b/_perf_test_site/index.html
@@ -126,7 +126,7 @@
     <!-- Footer -->
     <footer class="site-footer" role="contentinfo">
         <div class="wrapper">
-            <p>&copy; 2025 Baruch Sadogursky. All rights reserved.</p>
+            <p>&copy; now Baruch Sadogursky. All rights reserved.</p>
         </div>
     </footer>
 </body>
