--- a/talks.html
+++ b/talks.html
@@ -1,13 +1,17 @@
+---
+layout: null
+permalink: /talks/
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; URL=/">
-    <link rel="canonical" href="/">
+    <meta http-equiv="refresh" content="0; URL={{ site.baseurl }}/">
+    <link rel="canonical" href="{{ site.baseurl }}/">
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="{{ site.baseurl }}/">click here</a>.</p>
 </body>
 </html>
