fix: Use relative_url filter for proper baseurl handling
- Replace {{ site.baseurl }} with {{ '/' | relative_url }}
- relative_url filter automatically handles baseurl configuration
- Local development: redirects from /talks/ to /
- GitHub Pages: redirects from /shownotes/talks/ to /shownotes/
- More robust than manual baseurl concatenation

--- a/talks.html
+++ b/talks.html
@@ -8,10 +8,10 @@ permalink: /talks/
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; URL={{ site.baseurl }}/">
-    <link rel="canonical" href="{{ site.baseurl }}/">
+    <meta http-equiv="refresh" content="0; URL={{ '/' | relative_url }}">
+    <link rel="canonical" href="{{ '/' | relative_url }}">
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="{{ site.baseurl }}/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="{{ '/' | relative_url }}">click here</a>.</p>
 </body>
 </html>
