Fix Jekyll build and visual tests
- Revert migration script to generate markdown-only files (no YAML frontmatter)
- Update all visual test files to build Jekyll site before starting server
- Ensure proper site content generation before tests run
- Homepage now displays talks correctly using existing Jekyll plugin
- Visual tests now provide accurate results instead of false failures

--- a/_perf_test_site/talks/2025-06-20-voxxed-luxembourg-technical-enshittification/index.html
+++ b/_perf_test_site/talks/2025-06-20-voxxed-luxembourg-technical-enshittification/index.html
@@ -125,7 +125,7 @@
     
       <div class="embed-container pdf-embed">
         <div class="pdf-embed-attempt">
-          <iframe src="https://drive.google.com/file/d/1h_b-OxUOVmPIqywLOUIweH0kKaL4etdp/preview" 
+          <iframe src="https://drive.google.com/file/d/1hjP4Qh6inVawjRzYmHVloWmamcn5bPst/preview" 
                   frameborder="0" 
                   loading="lazy"
                   title=""
@@ -139,10 +139,10 @@
           <div class="fallback-content">
             <h4>Alternative Access:</h4>
             <div class="pdf-actions">
-              <a href="https://drive.google.com/file/d/1h_b-OxUOVmPIqywLOUIweH0kKaL4etdp/view" target="_blank" rel="noopener noreferrer" class="btn-primary">
+              <a href="https://drive.google.com/file/d/1hjP4Qh6inVawjRzYmHVloWmamcn5bPst/view" target="_blank" rel="noopener noreferrer" class="btn-primary">
                 Open in Google Drive
               </a>
-              <a href="https://drive.google.com/uc?id=1h_b-OxUOVmPIqywLOUIweH0kKaL4etdp" target="_blank" rel="noopener noreferrer" class="btn-secondary">
+              <a href="https://drive.google.com/uc?id=1hjP4Qh6inVawjRzYmHVloWmamcn5bPst" target="_blank" rel="noopener noreferrer" class="btn-secondary">
                 Download PDF
               </a>
             </div>
@@ -363,7 +363,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <!-- Footer -->
     <footer class="site-footer" role="contentinfo">
         <div class="wrapper">
-            <p>&copy; now Baruch Sadogursky. All rights reserved.</p>
+            <p>&copy; 2025 Baruch Sadogursky. All rights reserved.</p>
         </div>
     </footer>
 </body>
